--- a/app/src/main/res/layout/activity_details_donut.xml
+++ b/app/src/main/res/layout/activity_details_donut.xml
@@ -7,7 +7,7 @@
     tools:context=".DetailsDonut">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imgMain"
         android:layout_width="296dp"
         android:layout_height="264dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -16,7 +16,7 @@
         app:srcCompat="@drawable/pink_donut_1" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/txtName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -26,20 +26,20 @@
         android:textSize="20dp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/imgMain" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/txtDes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
         android:layout_marginTop="4dp"
         android:text="Spicy tasty donut family"
-        app:layout_constraintStart_toStartOf="@+id/textView3"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintStart_toStartOf="@+id/txtName"
+        app:layout_constraintTop_toBottomOf="@+id/txtName" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/txtPrice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="132dp"
@@ -47,9 +47,9 @@
         android:textColor="#000000"
         android:textSize="20dp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/textView4"
-        app:layout_constraintStart_toEndOf="@+id/textView4"
-        app:layout_constraintTop_toTopOf="@+id/textView4"
+        app:layout_constraintBottom_toBottomOf="@+id/txtDes"
+        app:layout_constraintStart_toEndOf="@+id/txtDes"
+        app:layout_constraintTop_toTopOf="@+id/txtDes"
         app:layout_constraintVertical_bias="1.0" />
 
     <Button
@@ -74,8 +74,8 @@
         android:textColor="#000000"
         android:textSize="20dp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/textView4"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintStart_toStartOf="@+id/txtDes"
+        app:layout_constraintTop_toBottomOf="@+id/txtDes" />
 
     <TextView
         android:id="@+id/textView7"
@@ -87,7 +87,7 @@
         android:textAllCaps="false"
         android:textColor="#AB000000"
         android:textSize="16dp"
-        app:layout_constraintStart_toStartOf="@+id/textView3"
+        app:layout_constraintStart_toStartOf="@+id/txtName"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <TextView
@@ -98,7 +98,7 @@
         android:layout_marginTop="32dp"
         android:text="Delivery in"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintTop_toBottomOf="@+id/txtDes" />
 
     <TextView
         android:id="@+id/textView9"
@@ -118,7 +118,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        app:layout_constraintStart_toStartOf="@+id/textView4"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        app:layout_constraintStart_toStartOf="@+id/txtDes"
+        app:layout_constraintTop_toBottomOf="@+id/txtDes"
         app:srcCompat="@drawable/clock" />
 </androidx.constraintlayout.widget.ConstraintLayout>
